--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=import.meta.env.DEV.VITE_PUBLIC_GOOGLE_ANALYTICS"></script> 
-      <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'import.meta.env.DEV.VITE_PUBLIC_GOOGLE_ANALYTICS'); </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=import.meta.env.PROD.VITE_PUBLIC_GOOGLE_ANALYTICS"></script> 
+      <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'import.meta.env.PROD.VITE_PUBLIC_GOOGLE_ANALYTICS'); </script>
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guide</title>
