--- a/guide/index.html
+++ b/guide/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script async src="https://www.googletagmanager.com/gtag/js?id=import.meta.env.VITE_PUBLIC_GOOGLE_ANALYTICS"></script> 
-      <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date());
-         gtag('config', 'import.meta.env.VITE_PUBLIC_GOOGLE_ANALYTICS'); </script>
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guide</title>
-      
+   <!-- Google tag (gtag.js)-->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-K93D6DKE6D"></script> 
+      <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date());
+         gtag('config', 'G-K93D6DKE6D'); </script>
   </head>
   <body>
     <div id="root"></div>
