--- a/guide/index.html
+++ b/guide/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
      <!-- Google tag (gtag.js)-->
-     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K93D6DKE6D"></script> 
-     <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date());
-        gtag('config', 'G-K93D6DKE6D'); </script>
+     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EWGR1VBY91"></script>
+     <script>
+       window.dataLayer = window.dataLayer || [];
+       function gtag(){dataLayer.push(arguments);}
+       gtag('js', new Date());
+     
+       gtag('config', 'G-EWGR1VBY91');
+     </script>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,3 +20,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
