--- a/guide/index.html
+++ b/guide/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
-     <!-- Google tag (gtag.js)-->
-     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EWGR1VBY91"></script>
-     <script>
-       window.dataLayer = window.dataLayer || [];
-       function gtag(){dataLayer.push(arguments);}
-       gtag('js', new Date());
-     
-       gtag('config', 'G-EWGR1VBY91');
-     </script>
     <meta charset="UTF-8" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HE3W5NHPGN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-HE3W5NHPGN');
+    </script>
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guide</title>
